[tool.poetry]
name = "b2-hm7"
version = "0.1.0"
description = ""
authors = ["Vadim-3 <128088822+Vadim-3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.3"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
faker = "^19.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
